Causeview Package Complete/ant script/retrieveUnpackaged/objects/FormSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>No longer used by Causeview.  Deprecated post Causeview v1.919</description>
    <fields>
        <fullName>BE_Account_ID__c</fullName>
        <description>The Id for this clients Account record in BE Database.</description>
        <inlineHelpText>The Id for this clients Account record in BE Database.</inlineHelpText>
        <label>(dep) BE Account ID</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <inlineHelpText>Moved to Causeview App Settings</inlineHelpText>
        <label>(dep) Contact</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation__c</fullName>
        <inlineHelpText>Moved to Causeview App Settings</inlineHelpText>
        <label>(dep) Donation</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GetStockFormUrl__c</fullName>
        <inlineHelpText>The URL used for retrieving form ids suitable for performing operations such as CC update, Refund, etc.</inlineHelpText>
        <label>(dep) Get Stock Form Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RSVP_Free_Public__c</fullName>
        <inlineHelpText>Moved to Causeview App Settings</inlineHelpText>
        <label>(dep) RSVP Free Public</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSVP_Free__c</fullName>
        <inlineHelpText>Moved to Causeview App Settings</inlineHelpText>
        <label>(dep) RSVP Free</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSVP__c</fullName>
        <inlineHelpText>Moved to Causeview App Settings</inlineHelpText>
        <label>(dep) RSVP</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>(dep) Causeview Form Settings</label>
</CustomObject>